--- a/workspace.yaml
+++ b/workspace.yaml
@@ -2,5 +2,7 @@ load_from:
   - python_file: 
       relative_path: "asset_example.py"
   - python_file: 
+      relative_path: "asset_example2.py"
+  - python_file: 
       relative_path: "sensor_invoke_after_etl.py"
 # workspace.yaml
