--- a/workspace.yaml
+++ b/workspace.yaml
@@ -7,3 +7,7 @@ load_from:
       relative_path: "sensors/etl2_sensor.py"
   - python_file: 
       relative_path: "jobs/call_cmd.py"
+  - python_file: 
+      relative_path: "jobs/etl3_job.py"
+  - python_file: 
+      relative_path: "jobs/ops_to_job.py"
